--- a/card.html
+++ b/card.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="card.css">
+    <title>Card</title>
 </head>
 <body>
-    
+  <div class="artboard">
+    <section class="card">
+      <header class="card-header">
+        <h2>caffe americano</h2>
+        <h3>the only real coffee</h3>
+      </header>
+      <img src="images/caffe.png" alt="illustration of a coffee cup" class="tazza">
+      <button class="cta">order now</button>
+    </section>
+  </div>
+
 </body>
 </html>
