--- a/card.html
+++ b/card.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Card exam of a beautiful cup of coffee">
     <link rel="stylesheet" href="card.css">
     <title>Card</title>
 </head>
