--- a/grid.html
+++ b/grid.html
@@ -1,1 +1,33 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Three layout with grids using HTML and CSS">
+    <link rel="stylesheet" href="grid.css">
+    <title>Grid</title>
+</head>
+<body>
+  <section class="mobile">
+    <img class="picture picturetop" src="images/macinino.png" alt="a machine to smash coffee">
+    <img class="picture" src="images/macinino.png" alt="a machine to smash coffee">
+    <img class="picture" src="images/tazza.png" alt="a coffee cup">
+    <img class="picture" src="images/tazza.png" alt="a coffee cup">
+    <img class="picture" src="images/brocca.png" alt="a coffee container">
+    <img class="picture" src="images/brocca.png" alt="a coffee container">
+    <img class="picture" src="images/moca.png" alt="an italian moca">
+    <img class="picture" src="images/moca.png" alt="an italian moca">
+  </section>
 
+  <section class="medium">
+    <img class="picture picturetop" src="images/macinino.png" alt="a machine to smash coffee">
+    <img class="picture" src="images/tazza.png" alt="a coffee cup">
+    <img class="picture" src="images/brocca.png" alt="a coffee container">
+    <img class="picture" src="images/moca.png" alt="an italian moca">
+    <img class="picture" src="images/brocca.png" alt="a coffee container">
+    <img class="picture" src="images/moca.png" alt="an italian moca">
+    <img class="picture" src="images/macinino.png" alt="a machine to smash coffee">
+    <img class="picture" src="images/tazza.png" alt="a coffee cup">
+  </section>
+</body>
+</html>
